--- a/app.json
+++ b/app.json
@@ -1,13 +1,33 @@
 {
-  "pages": [
+  "pages":[
     "pages/index/index",
     "pages/logs/logs",
-    "pages/geam/geam"
+    "pages/2048/2048"
+    
   ],
-  "window": {
-    "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle": "black"
-  }
+  "window":{
+    "navigationBarBackgroundColor":"#ffffff",
+    "navigationBarTextStyle":"#1AAD16",
+    "navigationBarTitleText":"微信接口功能演示",
+    "backgroundColor":"#eeeeee",
+    "backgroundTextStyle":"light"
+  },
+  "tabBar": {
+    "color": "#353535",
+    "selectedColor": "#3cc51f",
+    "borderStyle": "white",
+    "backgroundColor": "#ffffff",
+    "list": [{
+      "pagePath": "pages/index/index",
+      "text": "游戏"
+    }, {
+      "pagePath": "pages/logs/logs",
+      "text": "日志"
+    }]
+  },
+  "networkTimeout": {
+    "request": 10000,
+    "downloadFile": 10000
+  },
+  "debug": false
 }
