--- a/app.json
+++ b/app.json
@@ -1,29 +1,32 @@
 {
-  "pages":[
+  "pages": [
     "pages/index/index",
     "pages/logs/logs",
-    "pages/2048/2048"
-    
+    "pages/2048/2048",
+    "pages/list/list"
   ],
-  "window":{
-    "navigationBarBackgroundColor":"#ffffff",
-    "navigationBarTextStyle":"#1AAD16",
-    "navigationBarTitleText":"微信接口功能演示",
-    "backgroundColor":"#eeeeee",
-    "backgroundTextStyle":"light"
+  "window": {
+    "navigationBarBackgroundColor": "#ffffff",
+    "navigationBarTextStyle": "#1AAD16",
+    "navigationBarTitleText": "微信接口功能演示",
+    "backgroundColor": "#eeeeee",
+    "backgroundTextStyle": "light"
   },
   "tabBar": {
     "color": "#353535",
     "selectedColor": "#3cc51f",
     "borderStyle": "white",
     "backgroundColor": "#ffffff",
-    "list": [{
-      "pagePath": "pages/index/index",
-      "text": "游戏"
-    }, {
-      "pagePath": "pages/logs/logs",
-      "text": "日志"
-    }]
+    "list": [
+      {
+        "pagePath": "pages/index/index",
+        "text": "游戏"
+      },
+      {
+        "pagePath": "pages/logs/logs",
+        "text": "日志"
+      }
+    ]
   },
   "networkTimeout": {
     "request": 10000,
